java: complete the gate set (FMT, LINT, DOC-AUDIT, SURFACE-DIFF, SKILL-CONTRACT) (#28)
* build(fmt): add Spotless + google-java-format FMT gate, reformat all sources

Wire the Spotless gradle plugin running google-java-format (1.22.0) over
src/**/*.java (main + test + tools/CLI). google-java-format is the canonical
Java formatter — analogous to gofmt/rustfmt — so there is no style to bikeshed.
The run-ci.sh FMT gate (added in a later commit) runs `spotlessApply` locally
(auto-fix) and `spotlessCheck` in CI (read-only).

Reformats 228 Java sources to the canonical style. Proven surface/emission-
neutral: regenerating port_surface.json from formatted vs unformatted source is
byte-identical, and EMISSION is 81/81 byte-identical to the Python oracle. (The
signature enumerator's type-shape output flaps run-to-run on IDENTICAL source —
a pre-existing SignatureDump reflection-overload-ordering nondeterminism the
cross-port DRIFT differ normalizes away — independent of formatting.)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>

* build(lint): add Error Prone + Checkstyle LINT gate, burn to zero

Wire two blocking LINT layers:
  1. Error Prone (com.google.errorprone:error_prone_core:2.27.1) via the
     net.ltgt.errorprone plugin, warnings-as-errors — the compile-time
     bug-pattern checker.
  2. Checkstyle (gradle built-in plugin) with a config authored in
     config/checkstyle/checkstyle.xml — a Google/Sun-derived rule set that is
     consistent with google-java-format (it does NOT duplicate or fight the
     formatter: indentation/wrapping/brace-placement rules the formatter owns
     are intentionally omitted).

Burndown — Error Prone: 84 findings -> 0.
  Fixed in code (idiomatically, wire/surface-neutral):
    * StringCaseLocaleUsage (24) — added Locale.ROOT to toLowerCase/toUpperCase
      (ASCII case-folding identical to Python .lower()/.upper(); wire-neutral).
    * UnusedVariable (14) — deleted dead fields/locals; renamed unremovable
    